--- a/react-client-pagination/src/App.css
+++ b/react-client-pagination/src/App.css
@@ -56,7 +56,9 @@
   min-width: 0;
   margin-bottom: 0.7rem !important;
 }
-label {
-  display: inline-block;
-  width: 5rem !important;
-}
+/* label { */
+  /* display: inline-block; */
+  /* width: 5rem !important; */
+  /* width: 100% !important; */
+  /* height: 2rem; */
+/* } */
