--- a/react-client-pagination/src/App.css
+++ b/react-client-pagination/src/App.css
@@ -62,3 +62,38 @@
   /* width: 100% !important; */
   /* height: 2rem; */
 /* } */
+
+
+.sep {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.sepText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex:1;
+  color: #296D80;
+}
+
+.sepText::before,
+.sepText::after{
+  content: '';
+  flex:1;
+  width: 3px;
+  background: currentColor;
+  margin: .25em;
+}
+
+.btn-outline-secondary {
+  color: #fff !important;
+  background-color: #296D80 !important;
+  border-color: #296D80 !important;
+}
+
+.table td{
+border: none;
+}
