--- a/search-with-filter/src/App.css
+++ b/search-with-filter/src/App.css
@@ -37,6 +37,10 @@
   }
 }
 
+.flex {
+  display: flex;
+}
+
 .main-section {
   margin-top: 2% !important;
   width: 50%;
@@ -81,6 +85,11 @@
   color: #fff !important;
   background-color: #296D80 !important;
   border-color: #296D80 !important;
+}
+
+.table td {
+  border: none;
+  padding: .2rem .5rem !important;
 }
 
 
