follower - following app front end prototype designed as discussed.

--- a/follow-app/src/App.css
+++ b/follow-app/src/App.css
@@ -37,10 +37,10 @@
   }
 }
 
-.scrollbar {
-  max-height: 30vh;
-  overflow-y: scroll;
-}
+/* .scrollbar { */
+  /* max-height: 50vh; */
+  /* overflow-y: scroll; */
+/* } */
 
 .thumbnail_img {
   border-radius: 50% !important;
@@ -50,17 +50,25 @@
   max-height: 50% !important; */
 }
 
+.col{
+  --bs-gutter-y: 5px !important;
+  /* --bs-gutter-x: 4px !important; */
+}
 .row{
-  --bs-gutter-x: 0.2rem !important;
-  --bs-gutter-y: 0.0rem !important;
+  margin-right: 10px !important;
+  --bs-gutter-x: 4px !important;
+  /* --bs-gutter-y: 0 !important; */
 }
 
 #name-tooltip > .tooltip-inner {
   background-color: #fff;
   color: #000;
-  font-weight: bold !important;
-  /* border: 1px solid #296D80; */
+  border-radius: 0px !important;
+  border: 1px solid #296D80;
+  word-break: "break-all";
+  max-width: 150px !important;
 }
+
 #name-tooltip > .tooltip-arrow {
   color: #296D80;
   /* border-top: 5px solid #296D80; */
@@ -72,12 +80,12 @@
 }
 
 .MuiAccordionSummary-root, .Mui-expanded{
-  margin: 0 !important;
-  min-height: 0 !important;
+  /* margin: 0 !important; */
+  /* min-height: 0 !important; */
 }
 
 .MuiButtonBase-root, .Mui-expanded{
-  padding: 0 !important;
+  /* padding: 0 !important; */
 }
 
 .MuiAccordionDetails-root{
@@ -86,7 +94,6 @@
 
 .btn, .btn-outline-none {
     box-shadow: none !important;
-    padding: 0px !important;
+    /* padding: 0px !important; */
     COLOR: #296D80 !important;
-    font-weight: bold !important;
 }
